--- a/about.html
+++ b/about.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serin:Ryu</title>
     <link href="assets/style.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="main.js"></script>
 </head>
+
 <body>
     <!--Header-->
     <header class="header_subpage">
@@ -31,30 +33,7 @@
                     <div class="item"><a href="about.html">About</a></div>
                     <div class="item"><a href="contact.html">Contact</a></div>
             </div>
-        </div>
-        <script> 
-            const sidebarBox = document.querySelector('#box'),
-                sidebarBtn = document.querySelector('#btn'),
-                pageWrapper = document.querySelector('#page-wrapper');
-            sidebarBtn.addEventListener('click', event => {
-                    sidebarBtn.classList.toggle('active');
-                    sidebarBox.classList.toggle('active');
-            });
-            pageWrapper.addEventListener('click', event => {
-
-                    if (sidebarBox.classList.contains('active')) {
-                            sidebarBtn.classList.remove('active');
-                            sidebarBox.classList.remove('active');
-                    }
-            });
-            window.addEventListener('keydown', event => {
-
-                    if (sidebarBox.classList.contains('active') && event.keyCode === 27) {
-                            sidebarBtn.classList.remove('active');
-                            sidebarBox.classList.remove('active');
-                    }
-            });
-        </script>        
+        </div>    
     </header>
 
     <!--Section-->
