--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <!--Section-->
     <section class="about_section">
         <div class="about_title"> [류세린 | <i>ryu serɪn</i> ] </div>
-        <div class="about_pic"> <img src="assets/image/about_img.jpg"></div>
+        <div class="about_pic"> <img src="./assets/image/about_img.jpg"></div>
         <div class="about_discrip">
             <p> 일단, 어쨌든, 움직여보는 것의 중요함을 통감했다. 게다가 생각하는 것에만 너무 중점을 두다보면 자칫 행동하지 않을, 움직이지 않을 부정적인 이유를 만드는 데 생각이 더 쓰인다. 나한테는 무리니까, 난 이것밖에 못하니까 라며 스스로에 대한 선입견을 만든다. 자신에 대해 모르는 것보다 더 나쁜 것은 나를 '이렇다'고 단정짓는 것이다. 나에게 뭐가 있지? 내가 뭘 할 수 있지? 이렇게 생각이 뻗어나가면 또 하나의 내가 나를 바라보며 비웃고 있다. 넌 아무것도 못하잖아. 그냥 현실에 만족하고 살아. 그게 무난해. 실제로 행동으로 옮겨보기도 전에 '아냐 됐어. 나 따위가 뭘.' 이라며 부푼 마음을 누르는 데 더 많은 에너지를 쓴다. 자신의 수준을 냉정하게 직시하고 나한테는 이것이 최선이야, 라고 현실적으로 판단하는 것은 큰 용기다. 하지만 그것은 어디까지나 행동을 일으킨 다음 자신에게 맞는 자리를 찾는 과정에서 얻는 깨달음이지, 아무것도 하지 않으면서 머릿속에서 선만 긋는 것과는 다르다. 확고한 생각이나 단단한 가치관이 되어주는 것들은 내가 자발적으로 경험한 것들을 통해서 체득된다. 생각이 행동을 유발하지만 사실상 행동이 생각을 예민하게 가다듬고 정리해준다. 머릿속이 정리가 되지 않을 때는 일단 그 상황에 나를 집어넣어보는 것이 좋다. 가장 확실한 리트머스 역할을 해주기 때문이다. 용기는 그래서 필요하다. </p>
             
