--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <footer>
         <p class="copyright">Copyright @ Ryu Serin. All Rights Reserved.</p>
         <div class="sns">
-            <a href="https://www.instagram.com/userin/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/idryuserin"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/userin/" target=”_blank”><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/idryuserin" target=”_blank”><i class="fab fa-facebook-f"></i></a>
         </div>
     </footer>
 </body>
